Added an API for attaching a signature to a CV This involves a new type of magic for storing it, and a static inline wrapper for getting / setting it; the use of magic should be considered an implementation detail which may change.

--- a/pod/perlguts.pod
+++ b/pod/perlguts.pod
@@ -1058,6 +1058,11 @@ will be lost.
  %  PERL_MAGIC_rhash          (none)         extra data for restricted
                                              hashes
  &  PERL_MAGIC_proto          (none)         my sub prototype CV
+ (  PERL_MAGIC_subsig         vtbl_subsig    Storage for string
+                                             representing sub signature.
+                                             Should only be accessed
+                                             through
+                                             cv_[gs]et_signature_pv
  .  PERL_MAGIC_pos            vtbl_pos       pos() lvalue
  :  PERL_MAGIC_symtab         (none)         extra data for symbol
                                              tables
